tests/fixtures/compile_errors/bad_map2.fe
contract Foo:
  x: map<address, 100>
